[project]
name = "agentictradingfloor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastmcp>=2.13.0.1",
    "gradio>=5.49.1",
    "openai>=2.6.1",
    "openai-agents>=0.4.2",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "polygon>=1.2.8",
    "pydantic>=2.11.10",
]
